--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
+@import url('https://fonts.cdnfonts.com/css/avenir-next-lt-pro');
+@import url('https://fonts.cdnfonts.com/css/avenir-next-cyr');
+
+@font-face {
+  font-family: 'Avenir Next';
+  src: url(./assets/fonts/Metropolis-Regular.otf);
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* line-height: 1.5;
+  font-weight: 400; */
 
   /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -21,17 +29,20 @@
 }
 a:hover {
   color: #535bf2;
-}
+}*/
 
 body {
   margin: 0;
-  display: flex;
+  /*display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; */
 }
 
-h1 {
+/* p, h1 {
+  margin: 0;
+} */
+/*h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
