--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/avenir-next-lt-pro');
 @import url('https://fonts.cdnfonts.com/css/avenir-next-cyr');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&family=Work+Sans:wght@100;200;300;400;500;600;700;800&display=swap');
+
 
 @font-face {
   font-family: 'Avenir Next';
