--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,4 +1,4 @@
-.navbar {
+.navBar {
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
@@ -56,7 +56,7 @@
             border-top-right-radius: 8px;
             border-bottom-right-radius: 8px;
             text-align: center;
-            padding: 13px;
+            padding-top: 5px;
         }
     }
 
