--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,20 +1,37 @@
 .home {
+    box-sizing: border-box;
     display: flex;
     place-items: center;
     height: 100vh;
     box-sizing: border-box;
     margin-top: 15px;
-
+    
     .landing {
         display: flex;
         flex-direction: row;
         justify-content: center;
 
+        @media screen and (max-width: 430px) {
+            flex-direction: column;
+        }
+
         .lendsqr {
+            box-sizing: border-box;
             display: flex;
             flex-direction: column;
-            padding: 196px 69px;
             gap: 139px;
+            padding: 120px 69px 196px 69px;
+
+            @media screen and (max-width: 1280px) {
+                padding: 220px 69px 196px 69px;
+            }
+
+            @media screen and (max-width: 430px) {
+                gap: 30px;
+                margin-top: 60px;
+                margin-bottom: 50px;
+                padding: 0;
+            }
         
             .lendsqr-logo {
                 width: 100%;
@@ -22,6 +39,13 @@
                 height: 100%;
                 max-height: 36px;
                 margin-left: 30px;
+            }
+
+            .landing-img {
+                @media screen and (max-width: 430px) {
+                    width: 100%;
+                    max-width: 400px;
+                }
             }
         }
 
@@ -31,9 +55,20 @@
             max-width: 100%;
             width: 704px;
             height: 100vh;
-            padding-top: 250px;
+            padding-top: 220px;
             padding-left: 100px;
             box-shadow: 0px 15px 90px rgba(0, 0, 0, 0.03);
+
+            @media screen and (max-width: 1280px) {
+                padding: 370px 69px 196px 69px;
+            }
+
+            @media screen and (max-width: 430px) {
+                width: 100%;
+                max-width: 400px;
+                padding: 0 32px;
+                height: initial;
+            }
 
             .lc-text1 {
                 font-family: 'Avenir Next Cyr', 'Avenir Next', 'Avenir Next LT Pro', sans-serif;
@@ -66,6 +101,10 @@
                 box-sizing: border-box;
                 padding-left: 16px;
                 margin-bottom: 24px;
+
+                @media screen and (max-width: 1200px) {
+                    padding: 20px 16px;
+                }
             } 
 
             .lc-input2[type="password"] {
@@ -97,6 +136,10 @@
                 color: #39CDCC;
                 z-index: 1;
                 transform: translateY(-45px)  translateX(382px);
+
+                @media screen and (max-width: 430px) {
+                    transform: translateY(-45px) translateX(282px);
+                }
             }
 
             .lc-text3 {
