--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -29,6 +29,10 @@
         height: 40px;
         margin-right: 357px;
 
+        @media screen and (max-width: 1280px) {
+            margin-right: 30px;
+        }
+
         .search {
             border: none;
             border-top-left-radius: 8px;
@@ -99,6 +103,10 @@
         .sub-menu {
             margin-right: 66px;
             margin-bottom: 15px;
+
+            @media screen and (max-width: 1280px) {
+                margin-right: 26px;
+            }
         }
     }
 };
