--- a/src/containers/sidebar/sidebar.scss
+++ b/src/containers/sidebar/sidebar.scss
@@ -6,6 +6,10 @@
     background: #FFFFFF;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.04);
     padding: 39px 30px;
+
+    // @media screen and (max-width: 1024px) {
+    //     display: none;
+    // }
     
     p{
         margin: 0;
